--- a/cloud/job.yml
+++ b/cloud/job.yml
@@ -5,6 +5,7 @@ code:
 command:  >-
   python trainer.py 
   --config config.yml
+  --trainer.max_epochs 1
   --trainer.default_root_dir ./outputs 
   --data.data_dir {inputs.images}
 environment: azureml:pytorch-lightning:6
